# objpool

./: pyproject.toml  setup.cfg
objpool/: __init__.py  aio.py  exceptions.py  sync.py  types.py
