[tool.poetry]
authors = ["Sergey Arkhipov <nineseconds@yandex.ru>"]
description = "An implementation of object pool"
maintainers = ["Sergey Arkhipov <nineseconds@yandex.ru>"]
name = "uncork-browser-farm"
license = "MIT"
homepage = "https://github.com/9seconds/objpool"
repository = "https://github.com/9seconds/objpool"
# readme = "README.tst"
version = "0.0.1"
packages = [{ include = "objpool" }]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
devtools = {extras = ["pygments"], version = "^0.5.1"}
flake8 = "^3.7.9"
flake8-2020 = "^1.5.0"
flake8-annotations-complexity = "^0.0.2"
flake8-black = "^0.1.1"
flake8-blind-except = "^0.1.1"
flake8-broken-line = "^0.1.1"
flake8-bugbear = "^20.1.2"
flake8-builtins = "^1.4.2"
flake8-coding = "^1.3.2"
flake8-cognitive-complexity = "^0.0.2"
flake8-comprehensions = "^3.2.2"
flake8-debugger = "^3.2.1"
flake8-eradicate = "^0.2.4"
flake8-executable = "^2.0.3"
flake8-fixme = "^1.1.1"
flake8-import-order = "^0.18.1"
flake8-mutable = "^1.2.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^3.1.4"
flake8-pytest-style = "^0.1.3"
flake8-quotes = "^2.1.1"
flake8-string-format = "^0.2.3"
flake8-tidy-imports = "^4.0.0"
flake8-typing-imports = "^1.5.0"
ipdb = "^0.12.3"
ipython = "^7.11.1"
mypy = "^0.761"
pytest = "^4.6"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8.1"
tox = "^3.14.3"
tox-venv = "^0.4.0"
xenon = "^0.7.0"

[tool.black]
line-length = 79
target-version = ['py35']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
